[package]
name = "winipt"
version = "0.1.0"
authors = ["catnip <catnip@catnip.fyi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["winsvc", "winerror"] }
modular-bitfield = "0.6.0"

[build-dependencies]
cc = "1.0"
