[package]
name = "winipt"
version = "0.1.0"
authors = ["catnip <catnip@catnip.fyi>", "fourth <fourthsoftware.com>"]
edition = "2018"
license = "MIT"
description = "high level rust bindings for the winipt library (https://github.com/ionescu007/winipt)"
repository = "https://github.com/sum-catnip/winipt-rs"

[dependencies]
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["winsvc", "winerror"] }
winipt-sys = "0.1.1"
bitmask = "0.5.0"