[package]
name = "winipt"
version = "0.2.0"
authors = ["catnip <catnip@catnip.fyi>"]
edition = "2018"
license = "MIT"
description = "high level rust bindings for the winipt library (https://github.com/ionescu007/winipt)"
repository = "https://github.com/sum-catnip/winipt-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["winsvc", "winerror", "processthreadsapi"] }
winipt-sys = "0.1.1"
bitflags = "1.2.1"
num_enum = "0.4.2"